--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <p>We'd love to hear from you! Reach out to us using the form below or through the contact details provided.</p>
         <div class="contact-details">
           <p><strong>Phone:</strong> <a href="tel:+91-7087655689" style="color: #1db954">+91-7087655689</a></p>
-          <p><strong>Email:</strong> <a href="mailto:rgcashstudioinfo@gmail.com" target="_blank" style="color: #1db954">rgcashstudioinfo@gmail.com</a></p>
+          <p><strong>Email:</strong> <a href="mailto:rgcashstudios@gmail.com" target="_blank" style="color: #1db954">rgcashstudios@gmail.com</a></p>
         </div>
         <form class="contact-form" action="contact-form-handler.php" method="POST">
             <label for="name">Name</label>
