Added Social media links

--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
   <section class="about" id="about">
     <h2>About Us</h2>
     <p>At RG Cash Studio, we merge the world of music and creativity to create something extraordinary. Join us on this magical journey of sound and art.</p>
+  <!-- Social Links Section -->
+  <div class="social-links">
+    <a href="https://www.instagram.com/rg_cash_music" target="_blank" style="color: #1db954">
+      <img src="assets/images/Instagram_icon.png" alt="Instagram"><br>Instagram
+    </a>
+    <a href="https://www.youtube.com/@rgcashstudioinfo7387" target="_blank" style="color: #1db954">
+      <img src="assets/images/youtube_icon.png" alt="YouTube"><br>Youtube
+    </a>
+  </div>
+  
   </section>
 
 
