--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- Hero Section -->
   <section class="hero" id="home">
     <div class="hero-content">
-      <h1>Elevate Your</h1>
+      <h1>Elevate Your <span style="color: black; font-weight: bolder; font-size: larger;">Music</span></h1>
       <p>Welcome to the world of RG Cash Studio, where the magic of music comes alive.</p>
       <button class="discover-btn" onclick="window.open('https://wa.me/917087655689/?text=Want+to+know+more+about+the+studio+services', '_blank')">Discover More</button>
     </div>
