--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           <p><strong>Phone:</strong> <a href="tel:+91-7087655689" style="color: #1db954">+91-7087655689</a></p>
           <p><strong>Email:</strong> <a href="mailto:rgcashstudios@gmail.com" target="_blank" style="color: #1db954">rgcashstudios@gmail.com</a></p>
         </div>
-        <form class="contact-form" action="contact-form-handler.php" method="POST">
+        <form class="contact-form" action="contact-form.php" method="POST">
             <label for="name">Name</label>
             <input type="text" id="name" name="name" placeholder="Your Name" required>
           
