--- a/index.html
+++ b/index.html
@@ -61,18 +61,18 @@
     
     <h2>Our Music</h2>
     <div class="music-list">
-      <div class="music-card">
+      <!-- <div class="music-card">
         <img src="assets/images/track1.png" alt="Track 1">
         <a href="https://open.spotify.com/album/4FHND25SrQCIRQ5dKUefoH" target="_blank">King Roar</a>
-      </div>
+      </div> -->
       <div class="music-card">
         <img src="assets/images/track2.png" alt="Track 2">
         <a href="https://open.spotify.com/track/3XrN5ZPjGWfUs5DEF9m315" target="_blank">Bandook</a>
       </div>
-      <div class="music-card">
+      <!-- <div class="music-card">
         <img src="assets/images/track3.png" alt="Track 3">
         <a href="https://open.spotify.com/album/73PUI4Y87c7ViAE1O1rUHA" target="_blank">Reply to Haters</a>
-      </div>
+      </div> -->
       <!-- <div class="music-card">
         <img src="assets/images/track4.jpg" alt="Track 4">
         <a href="https://open.spotify.com/track/4" target="_blank">Track 4</a>
